--- a/project_code/templates/base.jinja
+++ b/project_code/templates/base.jinja
@@ -6,7 +6,7 @@
     <body>
         <header>
         <ul>
-            <li class="navLink"><a href="/home">Home</a></li>
+            <li class="navLink"><a href="/">Home</a></li>
         </ul>
         <ul>
             <li class="navLink"><a href="/sessions" >Gym Sessions</a></li>
