--- a/project_code/templates/members/single_member.jinja
+++ b/project_code/templates/members/single_member.jinja
@@ -10,7 +10,7 @@
         <p>Premium Member: {{ member.premium_member  }}</p>
 
     </div>
-    <a href = "/members"> Back to all members</a>
+    <a href = "/all_members"> Back to all members</a>
 </body>
 
 {% endblock %}
