fixed  add a new member to the database

--- a/project_code/templates/base.jinja
+++ b/project_code/templates/base.jinja
@@ -12,7 +12,7 @@
             <li class="navLink"><a href="/sessions" >Gym Sessions</a></li>
         </ul>
         <ul>
-            <li class="navLink"><a href="/all_members" >Members</a></li>
+            <li class="navLink"><a href="/members" >Members</a></li>
         </ul>
         <ul>
             <li class="navLink"><a href="/bookings" >Bookings</a></li>
