trying to add edit function to sessions bu failing

--- a/project_code/static/main.css
+++ b/project_code/static/main.css
@@ -1,38 +1,43 @@
 body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: antiquewhite;
-    justify-content: center;
-    }
-    
-    header {
-        display: flex;
-        flex-direction: row;
-    
-    }
-    
-    .navLink{
-        font: Arial;
-        list-style: none;
-    }
-    .top-border {
-        font-size: xx-large;
-        size: auto;
-        height: auto;
-        display: flex;
-        color: black;
-        align-items: top;
-        justify-self: center;
-        position: relative;
-        text-align: center;
-        border: 15px solid #555;
-        margin-left: 10%;
-        margin-right: 10%;
-    }
-    
-    .centered {
-        color: white;
-        position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+background-color: antiquewhite;
+justify-content: center;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.navLink{
+    font: Arial;
+    list-style: none;
+}
+.top-border {
+    font-size: xx-large;
+    size: auto;
+    height: auto;
+    display: flex;
+    color: black;
+    align-items: top;
+    justify-self: center;
+    position: relative;
+    text-align: center;
+    border: 15px solid #555;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.centered {
+    color: white;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.copyright {
+    justify-content: center ;
+    font-size: xx-small;
+
+}
