--- a/project_code/templates/base.jinja
+++ b/project_code/templates/base.jinja
@@ -34,5 +34,7 @@
             <img class = img src="{{ url_for('static', filename='person in a circle.jpg') }}" alt = "person in a circle" >
         </div>
     </footer> #}
-    <p style="color:rgb(97, 90, 90)">Copyright CC Gym Admin. Author: Becky Entwistle</p>
+    
+    <p class = "copyright" style="color:rgb(97, 90, 90)"  >Copyright CC Gym Admin. Author: Becky Entwistle</p>
+    <hr>
 </html>
