--- a/project_code/templates/members/single_member.jinja
+++ b/project_code/templates/members/single_member.jinja
@@ -14,7 +14,7 @@
             <i> No </i>
         {% endif %} </p>
 
-        <a href = "/members/edit"> Edit member </a>
+        <a href = "/members/{{member.id}}/edit"> Edit member </a>
     </div>
     <hr>
 
