--- a/project_code/templates/members/edit.jinja
+++ b/project_code/templates/members/edit.jinja
@@ -4,12 +4,13 @@
 
 <form action="/members/{{member.id}}/edit" method="post">
 <div>
-    <label for="name">First Name </label>
-    <input type="text" id="name" name="name" value="{{member.first_name}}" required autofocus>
+    <label for="first_name">First Name </label>
+    <input type="text" id="first_name" name="first_name" value="{{member.first_name}}" required autofocus>
 </div>
+
 <div>
-    <label for="name">Last Name </label>
-    <input type="text" id="name" name="name" value="{{member.last_name}}" required autofocus>
+    <label for="last_name">Last Name </label>
+    <input type="text" id="last_name" name="last_name" value="{{member.last_name}}" required autofocus>
 </div>
 <div>
     <label for="postcode">Postcode </label>
