added basic view of bookings but cheated to add names - need to get actual objects back

--- a/project_code/templates/bookings/bookings.jinja
+++ b/project_code/templates/bookings/bookings.jinja
@@ -16,8 +16,8 @@
 {% for booking in bookings %}
 
 <div class = "booking">
-<p> Member - {{ booking.member_id}} </p>
-<p> Session -  {{ booking.session_id }} </p>
+<p> Member - {{ booking[0]}} {{ booking[1]}} </p>
+<p> Session -  {{ booking[2] }} </p>
 {# <p> Premium Session? -
         {% if session.premium_session == True %}
             Yes
