--- a/project_code/templates/bookings/new.jinja
+++ b/project_code/templates/bookings/new.jinja
@@ -19,9 +19,9 @@
             {% endfor %}
         </select>
 
-    <label class = label for="permium_member">Premium member?</label>
-    <input type="checkbox" name="premium_member" id="premium_member" >
-
+    {# <label class = label for="permium_member">Premium member?</label>
+    <input type="checkbox" name="premium_member" id="premium_member"  > #}
+{# value = "{{member.premium_member}}" #}
     <input class = add_session type="submit" value="Add Booking" style="font-weight: bold;">
     </form>
     </a>
