--- a/project_code/templates/members/members.jinja
+++ b/project_code/templates/members/members.jinja
@@ -20,7 +20,7 @@
 <h3>Name - {{ member.first_name }} {{member.last_name}} </h3>
 <p> Postcode - {{ member.postcode }} </p>
 <p> Premium Member? - 
-        {% if session.premium_session == True %}
+        {% if member.premium_member == True %}
             Yes
         {% else %}
             <i> No </i>
