--- a/project_code/templates/bookings/bookings.jinja
+++ b/project_code/templates/bookings/bookings.jinja
@@ -2,7 +2,6 @@
 
 
 {% block content %}
-<form action="/bookings/{{session.id}}/booked_members" method="get">
 
 <div class = top-border>
     <div class="centered"><strong>CC Gym Admin</strong></div>
@@ -11,17 +10,17 @@
 <hr>
 <p></p>
 <a href = "bookings/new" > Add new booking</a> 
-<p>
+{# <form action="/bookings/booked_members" method="post">
     <label class = label for="session">Select a session</label>
         <select name="session" id="session">
             {% for session in sessions%}
                 <option value = "{{ session.id}}" >{{ session.name}} </option>
             {% endfor %}
         </select>
-    <button type="submit">Update member</button>
+    <button type="submit">View session bookings</button> #}
         {# <input class = view_session_bookings type="submit" value="View Session Bookings" style="font-weight: bold;"> #}
-    </form>
-</p>
+</form>
+
 <p></p>
 <hr>
 
