some images added in .css file

--- a/project_code/templates/bookings/bookings.jinja
+++ b/project_code/templates/bookings/bookings.jinja
@@ -4,8 +4,8 @@
 {% block content %}
 
 <div class = top-border>
-    <div class="centered"><strong>CC Gym Admin</strong></div>
-    <img src="{{ url_for('static', filename='feet_weight_unsplash.jpg') }}" alt = "feet and round weight" style='width:100%;'>
+    <div class="centered"><strong>Bookings Admin</strong></div>
+    <img src="{{ url_for('static', filename='thai boxers sparring.jpg') }}" alt = "thai boxers sparring" style='width:100%;'>
 </div>
 <hr>
 <p></p>
