--- a/project_code/templates/index.jinja
+++ b/project_code/templates/index.jinja
@@ -3,7 +3,7 @@
 {% block content %}
 <div class = top-border>
     <div class="centered"><strong>Welcome to CC Gym Admin!</strong></div>
-    <img src="{{ url_for('static', filename='gym_equipment_unsplash.jpg') }}" alt = "gym equipment" style='width:100%;'>
+    <img src="{{ url_for('static', filename='gym_equipment.jpg') }}" alt = "gym_equipment" style='width:100%;'>
 </div>
 
 <hr>
