--- a/project_code/static/main.css
+++ b/project_code/static/main.css
@@ -1,12 +1,13 @@
 body {
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-background-color: antiquewhite;
+background-color: #E9D5DA;
 justify-content: center;
 }
 
 header {
     display: flex;
     flex-direction: row;
+    background-color: rgb(130, 115, 151, 0.5) ;
 
 }
 
@@ -24,7 +25,7 @@ header {
     justify-self: center;
     position: relative;
     text-align: center;
-    border: 15px solid #555;
+    border: 15px solid rgb(54, 48, 98, 0.5);
     margin-left: 10%;
     margin-right: 10%;
 }
@@ -36,8 +37,36 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+
+
+.footer {
+    grid-template-areas: 'myArea myArea . .' 'myArea myArea . .';
+    display: grid;
+    margin: 20px;
+    justify-content: center;
+    align-items: center;
+    row-gap: 25px;
+    column-gap: 25px;
+}
+
+.single-picture {
+    margin: 8px;
+    Padding: 10px,10px,10px,10px;
+    overflow: hidden;
+}
+
+.img {
+    height: 250px;
+    max-width: 100%;     /* Set the max-width property to 100% */
+    margin: 20px,20px,20px,20px;
+    border: 5px solid #555;
+    }
+
 .copyright {
-    justify-content: center ;
+    justify: center ;
+    color: white;
     font-size: xx-small;
+    background-color: rgb(77, 76, 125, 0.8) ;
 
 }
