--- a/project_code/templates/base.jinja
+++ b/project_code/templates/base.jinja
@@ -23,18 +23,8 @@
 
         {% endblock %}
     </body>
-    {# <footer class = footer>
-        <div class = single_picture>
-            <img class = img src="{{ url_for('static', filename='optical illusion library.jpg') }}" alt = "optical illusion library" >
-        </div>
-        <div class = single_picture>
-            <img class = img src="{{ url_for('static', filename='think bin.jpg') }}" alt = "think bin" >
-        </div>
-        <div class = single_picture>
-            <img class = img src="{{ url_for('static', filename='person in a circle.jpg') }}" alt = "person in a circle" >
-        </div>
-    </footer> #}
+
     
-    <p class = "copyright" style="color:rgb(97, 90, 90)"  >Copyright CC Gym Admin. Author: Becky Entwistle</p>
+    <p class = "copyright"  >Copyright CC Gym Admin. Author: Becky Entwistle</p>
     <hr>
 </html>
