--- a/project_code/templates/bookings/new.jinja
+++ b/project_code/templates/bookings/new.jinja
@@ -22,11 +22,18 @@
         
         </select>
 
-    {# <label class = label for="permium_member">Premium member?</label>
-    <input type="checkbox" name="premium_member" id="premium_member"  > #}
-{# value = "{{member.premium_member}}" #}
     <input class = add_session type="submit" value="Add Booking" style="font-weight: bold;">
     </form>
     </a>
-
+    <footer class = footer>
+        <div class = single_picture>
+            <img class = img src="{{ url_for('static', filename='swimming pool.jpg') }}" alt = "swimming pool" >
+        </div>
+        <div class = single_picture>
+            <img class = img src="{{ url_for('static', filename = 'ropes.jpg') }}" alt = "ropes" >
+        </div>
+        <div class = single_picture>
+            <img class = img src="{{ url_for('static', filename='trainers.jpg') }}" alt = "pair of trainers" >
+        </div>
+    </footer>
 {% endblock %}
