--- a/project_code/templates/members/members.jinja
+++ b/project_code/templates/members/members.jinja
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class = top-border>
-    <div class="centered"><strong>CC Gym Admin</strong></div>
-    <img src="{{ url_for('static', filename='feet_weight_unsplash.jpg') }}" alt = "feet and round weight" style='width:100%;'>
+    <div class="centered"><strong>Members Admin</strong></div>
+    <img src="{{ url_for('static', filename='yoga mat.jpg') }}" alt = "yoga mat" style='width:100%;'>
 </div>
 <hr>
 <p></p>
