--- a/project_code/templates/members/single_member.jinja
+++ b/project_code/templates/members/single_member.jinja
@@ -21,6 +21,18 @@
 
     <a href = "/members"> Back to all members</a>
     <p> </p>
+    <footer class = footer>
+        <div class = single_picture>
+            <img class = img src="{{ url_for('static', filename='swimming pool.jpg') }}" alt = "swimming pool" >
+        </div>
+        <div class = single_picture>
+            <img class = img src="{{ url_for('static', filename = 'ropes.jpg') }}" alt = "ropes" >
+        </div>
+        <div class = single_picture>
+            <img class = img src="{{ url_for('static', filename='trainers.jpg') }}" alt = "pair of trainers" >
+        </div>
+    </footer>
+    
 </body>
 
 {% endblock %}
