--- a/project_code/templates/members/new.jinja
+++ b/project_code/templates/members/new.jinja
@@ -20,6 +20,17 @@
     <input class = add_member type="submit" value="Add Member" style="font-weight: bold;">
     </form>
     </a>
+        <footer class = footer>
+        <div class = single_picture>
+            <img class = img src="{{ url_for('static', filename='swimming pool.jpg') }}" alt = "swimming pool" >
+        </div>
+        <div class = single_picture>
+            <img class = img src="{{ url_for('static', filename = 'ropes.jpg') }}" alt = "ropes" >
+        </div>
+        <div class = single_picture>
+            <img class = img src="{{ url_for('static', filename='trainers.jpg') }}" alt = "pair of trainers" >
+        </div>
+    </footer>
 
 
 
