--- a/project_code/templates/members/members.jinja
+++ b/project_code/templates/members/members.jinja
@@ -4,7 +4,7 @@
 {% block content %}
 <div class = top-border>
     <div class="centered"><strong>Members Admin</strong></div>
-    <img src="{{ url_for('static', filename='yoga mat.jpg') }}" alt = "yoga mat" style='width:100%;'>
+    <img src="{{ url_for('static', filename='yoga mat.jpg') }}" alt = "yoga mat" style="width: 100%; ">
 </div>
 <hr>
 <p></p>
@@ -12,19 +12,12 @@
 <p></p>
 <hr>
 
-
 <div class = "member-container">
 {% for member in members %}
 
 <div class = "member">
 <h3>Name - {{ member.first_name }} {{member.last_name}} </h3>
-{# <p> Postcode - {{ member.postcode }} </p>
-<p> Premium Member? - 
-        {% if member.premium_member == True %}
-            Yes
-        {% else %}
-            <i> No </i>
-        {% endif %} </p> #}
+
 <a href = "/members/{{ member.id }}" > Show details </a> <hr>
 
 </div>
