more css updated

--- a/project_code/templates/members/members.jinja
+++ b/project_code/templates/members/members.jinja
@@ -4,7 +4,7 @@
 {% block content %}
 <div class = top-border>
     <div class="centered"><strong>Members Admin</strong></div>
-    <img src="{{ url_for('static', filename='yoga mat.jpg') }}" alt = "yoga mat" style="width: 100%; ">
+    <img src="{{ url_for('static', filename='yoga mat.jpg') }}" alt = "yoga mat" style="width: 100%;" object-fit: none;>
 </div>
 <hr>
 <p></p>
