Updated unittests due to changes made during production of the main app

--- a/project_code/templates/base.jinja
+++ b/project_code/templates/base.jinja
@@ -26,6 +26,6 @@
     </body>
 
     
-    <p class = "copyright"  >Copyright CC Gym Admin. Author: Becky Entwistle</p>
+    <p class = "copyright"  >Copyright CodeClan Gym Admin. Author: Becky Entwistle</p>
     <hr>
 </html>
