--- a/project_code/templates/members/new.jinja
+++ b/project_code/templates/members/new.jinja
@@ -6,13 +6,13 @@
     <form class = form-inline-add action="/members/new" method="post"> 
 
     <label class = label for="first_name">First name</label>
-    <input type="text" name="first_name" id="first_name">
+    <input type="text" name="first_name" id="first_name" required>
 
     <label class = label for="last_name">Last name</label>
-    <input type="text" name="last_name" id="last_name">
+    <input type="text" name="last_name" id="last_name" required>
 
     <label class = label for="postcode">Postcode </label>
-    <input type="text" name="postcode" id="postcode">
+    <input type="text" name="postcode" id="postcode" required>
 
     <label class = label for="permium_member">Premium member?</label>
     <input type="checkbox" name="premium_member" id="premium_member" >
