--- a/project_code/templates/members/edit.jinja
+++ b/project_code/templates/members/edit.jinja
@@ -34,7 +34,7 @@
     </select>
 </div>
 
-<button type="submit">Update member</button>
+<button class = submit_button type="submit">Update member</button>
 
 </form>
 
