--- a/project_code/templates/members/edit.jinja
+++ b/project_code/templates/members/edit.jinja
@@ -2,22 +2,22 @@
 
 {% block content %}
 
-<form action="/members/{{member.id}}/edit" method="post">
-<div>
+<form class = input_form action="/members/{{member.id}}/edit" method="post">
+<div class = form_row>
     <label for="first_name">First Name </label>
-    <input type="text" id="first_name" name="first_name" value="{{member.first_name}}" required autofocus>
+    <input type="text" id="first_name" name="first_name" value="{{member.first_name}}" required autofocus style = "width:350px;">
 </div>
 
-<div>
+<div class = form_row>
     <label for="last_name">Last Name </label>
-    <input type="text" id="last_name" name="last_name" value="{{member.last_name}}" required autofocus>
+    <input type="text" id="last_name" name="last_name" value="{{member.last_name}}" required autofocus style = "width:350px;">
 </div>
-<div>
+<div class = form_row>
     <label for="postcode">Postcode </label>
-    <input type="text" id="postcode" name="postcode" value="{{member.postcode}}" required>
+    <input type="text" id="postcode" name="postcode" value="{{member.postcode}}" required style = "width:350px;">
 </div>
 
-<div>
+<div class = form_row>
     <label for="premium_member">Premium member </label>
     <select id="premium_member" name="premium_member">
 
