--- a/project_code/templates/members/members.jinja
+++ b/project_code/templates/members/members.jinja
@@ -12,18 +12,27 @@
 <p></p>
 <hr>
 
+<table>
+  <tr >
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Premium Member?</th>
+    <th>Details </th>
+  </tr>
+
 <div class = "member-container">
 {% for member in members %}
-
-<div class = "member">
-<h3>Name - {{ member.first_name }} {{member.last_name}} </h3>
-
-<a href = "/members/{{ member.id }}" > Show details </a> <hr>
-
+<tr >
+    <td>{{ member.first_name}}</td>
+    <td>{{member.last_name}}</td>
+    <td>{% if member.premium_member == True %} Yes {% else %} No {%endif%} </td>
+    <td><a href = "/members/{{ member.id }}" > Show details </a></td>
 </div>
 
 {% endfor %}
 </div>
 
+
+</table>
 {% endblock %}
 
