--- a/project_code/templates/members/new.jinja
+++ b/project_code/templates/members/new.jinja
@@ -3,21 +3,26 @@
 {% block content %}
 <h1>Add a new member: </h1>
 <a class = add_member_area >
-    <form class = form-inline-add action="/members/new" method="post"> 
-
+    <form class = input_form action="/members/new" method="post"> 
+<div class = form_row>
     <label class = label for="first_name">First name</label>
-    <input type="text" name="first_name" id="first_name" required>
-
+    <input type="text" name="first_name" id="first_name" required style = "width:350px;">
+</div>
+<div class = form_row>
     <label class = label for="last_name">Last name</label>
-    <input type="text" name="last_name" id="last_name" required>
-
+    <input type="text" name="last_name" id="last_name" required style = "width:350px;">
+</div>
+<div class = form_row>
     <label class = label for="postcode">Postcode </label>
-    <input type="text" name="postcode" id="postcode" required>
-
+    <input type="text" name="postcode" id="postcode" required style = "width:350px;">
+</div>
+<div class = form_row>
     <label class = label for="permium_member">Premium member?</label>
     <input type="checkbox" name="premium_member" id="premium_member" >
+</div>
 
-    <input class = add_member type="submit" value="Add Member" style="font-weight: bold;">
+    <input class = submit_button type="submit" value="Add Member" style="font-weight: bold;">
+    
     </form>
     </a>
         <footer class = footer>
