added new screenshot

--- a/project_code/templates/bookings/bookings.jinja
+++ b/project_code/templates/bookings/bookings.jinja
@@ -18,7 +18,7 @@
     <th>Session</th>
     <th>Name</th>
     <th>Premium</th>
-    <th>Cancel </th>
+    {# <th>Cancel </th> #}
   </tr>
 
 <div class = "booking-container">
@@ -32,7 +32,7 @@
         {% else %}
             <i> - </i>
         {% endif %}</td>
-    <td><button class = submit_button type="submit">X</button></td>
+    {# <td><button class = submit_button type="submit">X</button></td> #}
     {# To do - button will delete booking from bookings table when connected #}
 </tr>
 {% endfor %}
