--- a/project_code/templates/base.jinja
+++ b/project_code/templates/base.jinja
@@ -1,7 +1,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+        {% block extra_head %}{% endblock %}
         <title>{{ title }} - CC Gym Admin </title>
+        
     </head>
     <body>
         <header>
