implemented a delete function to remove bookings

--- a/project_code/templates/bookings/bookings.jinja
+++ b/project_code/templates/bookings/bookings.jinja
@@ -18,7 +18,7 @@
     <th>Session</th>
     <th>Name</th>
     <th>Premium</th>
-    {# <th>Cancel </th> #}
+    <th>Details </th>
   </tr>
 
 <div class = "booking-container">
@@ -34,6 +34,8 @@
         {% endif %}</td>
     {# <td><button class = submit_button type="submit">X</button></td> #}
     {# To do - button will delete booking from bookings table when connected #}
+    <td><a href = "/bookings/{{ booking.id }}" > Show details </a></td>
+
 </tr>
 {% endfor %}
 
