--- a/project_code/static/main.css
+++ b/project_code/static/main.css
@@ -89,6 +89,11 @@ table {
     justify-self: right;
 }
 
+.delete-form{
+    padding:0%;
+    margin: 0%;
+}
+
 .footer {
     grid-template-areas: 'myArea myArea . .' 'myArea myArea . .';
     display: grid;
@@ -119,3 +124,16 @@ table {
     background-color: rgb(77, 76, 125, 0.8) ;
 
 }
+
+.btn {
+    background: rgb(130, 115, 151, 0.5); 
+    border-radius: 4px;
+    color: black; 
+    border: 2px solid #f44336;
+    padding: 0.5rem;
+}
+
+.btn:hover {
+    background-color: #f44336;
+    color: white;
+  }
