--- a/project_code/templates/bookings/single_booking.jinja
+++ b/project_code/templates/bookings/single_booking.jinja
@@ -17,9 +17,8 @@
     <td>{{ booking.last_name }} </td> 
     <td>{{ booking.name }} </td>         
     <td>
-        {# <a href = "/bookings/delete/{{booking.id}}"> Delete booking </a> #}
-        <form action="/bookings/delete/{{ booking.id }}" method="GET">
-            <button type="submit" class="btn btn-danger">Delete booking</button>
+        <form class = "delete-form" action="/bookings/delete/{{ booking.id }}" method="GET">
+            <button type="submit" class="btn btn-danger">Cancel booking</button>
         </form>
     </td>
  
